--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="nav-item"><a href="#achievements">Achievements</a></div>
                 <div class="nav-item"><a href="#certifications">Certifications</a></div>
                 <div class="nav-item"><a href="#contactMe">Contact Me</a></div>
+                <div class="nav-item"><a href="./userAsset/RiddhiBhanushali_22AD1040.pdf" target="_blank" download>Resume</a></div>
             </div>
 
             <div class="nav-links">
@@ -67,8 +68,10 @@
                         <div class="hero-section-description">
                             I'm a passionate developer specializing in AI/ML and full-stack web development. This is my portfolio, where you can explore my journey, projects, and skills.
                         </div>
-                        <a href="mailto:bhanushaliriddhiwork@gmail.com" target="_blank"
-                            class="btn">CONTACT ME</a>
+                    
+                        <div class="hero-buttons-container">
+                        <a href="mailto:bhanushaliriddhiwork@gmail.com" target="_blank" class="btn">Contact me</a>
+                      </div>
                     </div>
 
                     <div class="hero-section-right">
