--- a/index.html
+++ b/index.html
@@ -469,8 +469,23 @@
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
-        <script src="./roleScript.js"></script>
+        <!-- <script src="./roleScript.js"></script> -->
         <script src="./scrollToTop.js"></script>
+         <script>
+            var typeData = new Typed(".role", {
+                strings: [
+                "an AI/ML Engineer",
+                "a Full Stack Developer",
+                "2x Ideathon Winner",
+                "4x Hackathon Finalist",
+                "Riddhi Bhanushali",
+                ],
+                loop: true,
+                typeSpeed: 100,
+                backSpeed: 80,
+                backDelay: 1000,
+            });
+         </script>
 </body>
 
 </html>
