--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
                     <p class="card-issuer">Semi-Finalist at Meesho ScriptedByHer Hackathon for building SmartSho — an AI-powered sustainable commerce platform driving inclusive, eco-friendly e-commerce!</p>
                 </div>
                 <div class="info-card">
+                    <i class="fa-solid fa-user-tie card-icon"></i>
+                    <h3 class="card-title">President at CSI-RAIT</h3>
+                    <p class="card-issuer">Leading the Computer Society of India student chapter, organizing workshops, hackathons, and seminars to foster a vibrant tech community at RAIT.</p>
+                </div>
+                <div class="info-card">
                     <i class="fa-solid fa-trophy card-icon"></i>
                     <h3 class="card-title">DCAL Ideathon Winner</h3>
                     <p class="card-issuer">Won 1st place at DCAL Ideathon for the Planet.</p>
