--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <div class="nav-item"><a href="#achievements">Achievements</a></div>
                 <div class="nav-item"><a href="#certifications">Certifications</a></div>
                 <div class="nav-item"><a href="#contactMe">Contact Me</a></div>
-                <div class="nav-item"><a href="./userAsset/RiddhiBhanushali_22AD1040.pdf" target="_blank" download>Resume</a></div>
+                <div class="nav-item">
+                    <a href="/userAsset/RiddhiBhanushali_22AD1040.pdf" target="_blank">Resume</a>
+                </div>
             </div>
 
             <div class="nav-links">
